# plc-comm-hostlink-rust

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  range.csv
.github/workflows/: ci.yml
docs/: DEVICE_RANGES.md  KEYENCE_AVAILABLE_DEVICES.csv  KV5000_LIVE_VALIDATION_2026-05-03.md  KV7000_LIVE_VALIDATION_2026-05-03.md
examples/: basic_high_level.rs  kv_device_range_sample_compare.rs
src/: address.rs  client.rs  device_ranges.rs  error.rs  helpers.rs  lib.rs  model.rs  protocol.rs
tests/: frame_vectors.rs  high_level.rs
tests/vectors/: hostlink_frame_vectors.json
